@@ -10,16 +10,19 @@ Version 3.6 (XX XXth, 2023) - ""
 Improve Cosmic Flash sound emulation
 Improve Zac11178 sound emulation (clown, poolcham, bbeltzac, mexico, zankor, spooky)
 
-*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio, Matt's Basement Arcade, inkochnito, flipprojets.fr
+*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio, Matt's Basement Arcade, inkochnito, flipprojets.fr, Idleman
 Correct Dumps:
 Bell: Cosmic Flash (correct sound ROM)
 
 Clones:
+Dracula (One Ball MOD)
+Lightning (Free Play & MOD rev. 25)
 Metallica 0.52
 Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
 Spirit rev. 3 (MOD)
 Tommy 1.02 (Belgian)
 White Water P-6 (Prototype)
+Wildfyre (One Ball MOD)
 
 Removed Clones:
 STTNG S7/DS (as these were just created to be able to use a P-1 sound rom, (for now) wired to P-4 instead)
